Rename PoissonSolver -> QNSolver in X-Y-Vx-Vy Geometry
Part 2 of #226 fixes X-Y-Vx-Vy Geometry. Closes #226

See merge request gysela-developpers/gyselalibxx!479

--------------------------------------------

--- a/src/geometryXYVxVy/poisson/CMakeLists.txt
+++ b/src/geometryXYVxVy/poisson/CMakeLists.txt
@@ -2,8 +2,8 @@
 
 add_library("poisson_xy" STATIC
     chargedensitycalculator.cpp
-    nullpoissonsolver.cpp
-    fftpoissonsolver.cpp
+    nullqnsolver.cpp
+    fftqnsolver.cpp
 )
 
 target_compile_features("poisson_xy"
