Add a dimension reordering operator
Fixes #220

See merge request gysela-developpers/gyselalibxx!468

--------------------------------------------

Co-authored-by: Thomas Padioleau <thomas.padioleau@cea.fr>

--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -7,6 +7,7 @@ include(GoogleTest)
 add_executable(unit_tests_utils
     field.cpp
     test_ddcHelpers.cpp
+    transpose.cpp
     ../main.cpp
 )
 target_compile_features(unit_tests_utils PUBLIC cxx_std_17)
