Adding diffusive neutral solver
This MR adds a solver for the so-called pressure-diffusive neutral model. cf. `src/geometryXVx/geometryMX/fluidsolver/diffusiveneutralsolver.hpp` for some documentation on the solver. A constant reaction rate class is added alongside the diffusive solver.

See merge request gysela-developpers/gyselalibxx!477

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Baptiste Legouix <stilynx51@gmail.com>

--- a/src/geometryXVx/geometryMX/fluidsolver/CMakeLists.txt
+++ b/src/geometryXVx/geometryMX/fluidsolver/CMakeLists.txt
@@ -3,6 +3,7 @@
 foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 
 add_library("fluidsolver_${GEOMETRY_VARIANT}" STATIC
+    diffusiveneutralsolver.cpp
     nullfluidsolver.cpp
 )
 
@@ -24,6 +25,9 @@ target_link_libraries("fluidsolver_${GEOMETRY_VARIANT}"
         gslx::interpolation
         gslx::quadrature
         gslx::speciesinfo
+        gslx::reactionrates_${GEOMETRY_VARIANT}
+        gslx::speciesinfo
+        gslx::timestepper
 )
 
 add_library("gslx::fluidsolver_${GEOMETRY_VARIANT}" ALIAS "fluidsolver_${GEOMETRY_VARIANT}")
