Resolve "Compilation failure of tests when no GPU is available"
Closes #213

See merge request gysela-developpers/gyselalibxx!491

--------------------------------------------

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(unit_tests_common
         gslx::speciesinfo
 )
 
-gtest_discover_tests(unit_tests_common)
+gtest_discover_tests(unit_tests_common DISCOVERY_MODE PRE_TEST)
 
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
