--- a/tests/geometryRTheta/quadrature/CMakeLists.txt
+++ b/tests/geometryRTheta/quadrature/CMakeLists.txt
@@ -15,4 +15,4 @@ target_link_libraries(Li_norms_spline_quadrature_tests
         gslx::geometry_RTheta
         gslx::quadrature
 )
-gtest_discover_tests(Li_norms_spline_quadrature_tests)
+gtest_discover_tests(Li_norms_spline_quadrature_tests DISCOVERY_MODE PRE_TEST)
