--- a/tests/geometryXVx/geometryMX/CMakeLists.txt
+++ b/tests/geometryXVx/geometryMX/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(unit_tests_geometryMX_${GEOMETRY_VARIANT}
 gtest_discover_tests(unit_tests_geometryMX_${GEOMETRY_VARIANT}
     TEST_SUFFIX "_${GEOMETRY_VARIANT}"
     PROPERTIES TIMEOUT 10
+    DISCOVERY_MODE PRE_TEST
 )
 
 endforeach()
