--- a/tests/timestepper/CMakeLists.txt
+++ b/tests/timestepper/CMakeLists.txt
@@ -25,4 +25,4 @@ target_link_libraries(unit_tests_timestepper
         gslx::utils
 )
 
-gtest_discover_tests(unit_tests_timestepper)
+gtest_discover_tests(unit_tests_timestepper DISCOVERY_MODE PRE_TEST)
