--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,5 +18,6 @@ gtest_discover_tests(unit_tests_common DISCOVERY_MODE PRE_TEST)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
+add_subdirectory(pde_solvers)
 add_subdirectory(timestepper)
 add_subdirectory(utils)
