--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(geometryXYVxVy)
 add_subdirectory(interpolation)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
+add_subdirectory(pde_solvers)
