--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(geometryXVx)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(interpolation)
+add_subdirectory(multipatch)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
 add_subdirectory(pde_solvers)
