Reduce duplication when outputting coordinates
Closes #242

See merge request gysela-developpers/gyselalibxx!509

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/simulations/geometry5D/testcollisions/CMakeLists.txt
+++ b/simulations/geometry5D/testcollisions/CMakeLists.txt
@@ -7,11 +7,12 @@ target_link_libraries(testcollisions
   PUBLIC
   DDC::DDC
   DDC::PDI_Wrapper
-  gslx::speciesinfo
+  gslx::collisions_rhs_5D
   gslx::geometry5D
+  gslx::io
   gslx::paraconfpp
   gslx::quadrature
-  gslx::collisions_rhs_5D
+  gslx::speciesinfo
   PDI::pdi
   paraconf::paraconf
   )
