--- a/simulations/geometryXVx/neutrals/CMakeLists.txt
+++ b/simulations/geometryXVx/neutrals/CMakeLists.txt
@@ -21,6 +21,7 @@ target_link_libraries(neutrals_${GEOMETRY_VARIANT}
         gslx::rhs_${GEOMETRY_VARIANT}
         gslx::speciesinfo
         gslx::time_integration_hybrid_${GEOMETRY_VARIANT}
+        gslx::io
         paraconf::paraconf
         PDI::pdi
 )
