Adding of the collision/ folder with the collision operator in (species,vpar,mu)
Closes #200

See merge request gysela-developpers/gyselalibxx!424

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/simulations/geometry5D/testcollisions/CMakeLists.txt
+++ b/simulations/geometry5D/testcollisions/CMakeLists.txt
@@ -7,11 +7,11 @@ target_link_libraries(testcollisions
   PUBLIC
   DDC::DDC
   DDC::PDI_Wrapper
-  gslx::collisions_rhs_5D
   gslx::geometry5D
   gslx::io
   gslx::paraconfpp
   gslx::quadrature
+  gslx::collision
   gslx::speciesinfo
   PDI::pdi
   paraconf::paraconf
