--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(interpolation)
 add_subdirectory(multipatch)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
+add_subdirectory(collision)
 add_subdirectory(pde_solvers)
