Reduce duplication in domain initialisation from splines
Closes #239

See merge request gysela-developpers/gyselalibxx!516

--------------------------------------------

--- a/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
+++ b/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
@@ -5,25 +5,26 @@ add_executable(vortex_merger
 )
 target_compile_features(vortex_merger PUBLIC cxx_std_17)
 target_link_libraries(vortex_merger
-    PUBLIC       
+    PUBLIC
         DDC::DDC
-	    DDC::PDI_Wrapper
-	    paraconf::paraconf
-	    PDI::pdi
-	        
-	    Eigen3::Eigen
-	        
-	    sll::SLL
-	    gslx::paraconfpp
-	       
-	    gslx::poisson_RTheta
-	    gslx::geometry_RTheta
-	    gslx::interpolation_2D_rp
-	    gslx::advection_rp
-	    gslx::time_integration_rp
-	    gslx::quadrature
-	    gslx::utils
-	    gslx::vortex_merger_init_eq
-		gslx::simulation_utils
+        DDC::PDI_Wrapper
+        paraconf::paraconf
+        PDI::pdi
+
+        Eigen3::Eigen
+
+        sll::SLL
+
+        gslx::advection_rp
+        gslx::geometry_RTheta
+        gslx::io
+        gslx::interpolation_2D_rp
+        gslx::paraconfpp
+        gslx::poisson_RTheta
+        gslx::quadrature
+        gslx::simulation_utils
+        gslx::time_integration_rp
+        gslx::utils
+        gslx::vortex_merger_init_eq
 )
 
