--- a/simulations/geometryRTheta/vortex_merger/params.yaml
+++ b/simulations/geometryRTheta/vortex_merger/params.yaml
@@ -1,8 +1,10 @@
-Mesh:
-  r_size: 128
-  p_size: 256
+SplineMesh:
+  r_ncells: 128
   r_min: 0.0
   r_max: 1.0 
+  p_ncells: 256
+  p_min: 0.0
+  p_max: 6.283185307179586
 
 Time:
   delta_t: 0.1
