Reduce duplication for input of simulation configuration
Closes #238

See merge request gysela-developpers/gyselalibxx!517

--------------------------------------------

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -1,10 +1,8 @@
 # SPDX-License-Identifier: MIT
 
-add_library("io" INTERFACE)
-
-target_compile_features("io"
-    INTERFACE
-        cxx_std_17
+add_library("io"
+  STATIC
+    input.cpp
 )
 
 target_include_directories("io"
@@ -12,7 +10,7 @@ target_include_directories("io"
 )
 
 target_link_libraries("io"
-    INTERFACE
+    PUBLIC
         DDC::DDC
         gslx::paraconfpp
 )
