Add type to hold values and derivatives
In order to handle patches derivatives will be needed at the boundaries of the domain. This MR introduces a structure to link values and derivatives of a field in one structure which fixes #224. DDC does not provide a sub-domain type. Such a type is important as `DiscreteElement`s are linked to coordinates and we want values on the same grid. This MR therefore implements a sub-domain type and stores data internally on mdspans instead of `ddc::Chunk`s.

See merge request gysela-developpers/gyselalibxx!484

--------------------------------------------

--- a/src/geometryRTheta/geometry/CMakeLists.txt
+++ b/src/geometryRTheta/geometry/CMakeLists.txt
@@ -11,6 +11,7 @@ target_include_directories("geometry_RTheta"
 target_link_libraries("geometry_RTheta" INTERFACE
     DDC::DDC
     sll::SLL
+    gslx::data_types
     gslx::speciesinfo
     gslx::utils
 )
