--- a/src/geometryRTheta/poisson/CMakeLists.txt
+++ b/src/geometryRTheta/poisson/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories(poisson_RTheta
 target_link_libraries(poisson_RTheta INTERFACE
         DDC::DDC
         sll::SLL
+        gslx::data_types
         gslx::geometry_RTheta
         gslx::speciesinfo
         gslx::utils
