--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 cmake_minimum_required(VERSION 3.15)
 
+add_subdirectory(data_types)
 add_subdirectory(utils)
 add_subdirectory(speciesinfo)
 add_subdirectory(io)
