--- a/src/geometryRTheta/advection_field/CMakeLists.txt
+++ b/src/geometryRTheta/advection_field/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories("advection_field_RTheta"
 target_link_libraries("advection_field_RTheta" INTERFACE
     DDC::DDC
     sll::SLL
+    gslx::data_types
     gslx::speciesinfo
     gslx::utils
     gslx::poisson_RTheta
