Advection operator 1D for templated geometry
Add an advection operator which can solve the following equation : 

$\\partial_t f  + A \\partial\_{x_i} f  = 0$

The advection direction can be spatial or along the velocity dimension. We need to provide an advection field. The function \\( f \\) can be only on a full domain (with Species, Space and Velocity), on a space/velocity domain (Space and Velocity) or on a space domain (Space).

See merge request gysela-developpers/gyselalibxx!481

--------------------------------------------

Co-authored-by: Pauline Vidal <pavi@nb-pavi-1.ipp.mpg.de>

--- a/src/advection/CMakeLists.txt
+++ b/src/advection/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries("advection"
         sll::SLL
         gslx::interpolation
         gslx::speciesinfo
+        gslx::timestepper
         gslx::utils
 )
 
