Install OpenMPI to docker environment
Closes #255

See merge request gysela-developpers/gyselalibxx!538

--------------------------------------------

--- a/docker/gyselalibxx_env/Dockerfile
+++ b/docker/gyselalibxx_env/Dockerfile
@@ -32,6 +32,7 @@ RUN chmod +x /bin/bash_run \
     git \
     libfftw3-dev \
     liblapacke-dev \
+    libopenmpi-dev \
     openssh-client \
     pdidev-archive-keyring \
     hdf5-tools \
