Clean up quadrature tests
Fixes #207

See merge request gysela-developpers/gyselalibxx!539

--------------------------------------------

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,5 +22,6 @@ add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
 add_subdirectory(multipatch)
 add_subdirectory(pde_solvers)
+add_subdirectory(quadrature)
 add_subdirectory(timestepper)
 add_subdirectory(utils)
