Resolve "Add a Guiding Center simulation"
Closes #219 Add a guiding center in XY geometry for further tests on multipatch geometry. Any new operator to implement, only the simulation. Implementation on CPU in this branch. Maybe an update to GPU or it will be made in another branch.

**New comment:**

* Add a guiding center simulation on XY geometry with Kelvin-Helmholtz test case.
* KelvinHelmholtzInstabilityInitialisation, PredCorrRK2XY operators implemented. 
* Add a geometryXY folder in source. 
* Simulation runs on CPU and GPU.
* Add some python scripts for the diagnosis in a geometryXY/ folder.

See merge request gysela-developpers/gyselalibxx!467

--------------------------------------------

Co-authored-by: Pauline Vidal <pavi@nb-pavi-1.ipp.mpg.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
 add_subdirectory(geometry5D)
 add_subdirectory(geometryXVx)
+add_subdirectory(geometryXY)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(interpolation)
