--- a/simulations/CMakeLists.txt
+++ b/simulations/CMakeLists.txt
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: MIT
 
-add_subdirectory(geometryXVx)
-add_subdirectory(geometryRTheta)
-add_subdirectory(geometryXYVxVy)
+
 add_subdirectory(geometry5D)
+add_subdirectory(geometryRTheta)
+add_subdirectory(geometryXVx)
+add_subdirectory(geometryXY)
+add_subdirectory(geometryXYVxVy)
 add_subdirectory(utilities)
