Add device_t<> for VectorField too
Closes #261.

* Add the option to use `device_t` on `VectorField` and `VectorFieldSpan` too. 
* Add a test `device_host_t.cpp` which tests `device_t` and `host_t` on Chunk, ChunkSpan, VectorField and VectorFieldSpan.  
* Fix a compilation error due to redeclaration of `deepcopy`  in `vector_field_common.hpp` and `derivative_field.hpp`.

See merge request gysela-developpers/gyselalibxx!542

--------------------------------------------

Co-authored-by: Pauline Vidal <pavi@nb-pavi-1.ipp.mpg.de>

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -15,6 +15,7 @@ target_include_directories("utils"
 target_link_libraries("utils"
     INTERFACE
         DDC::DDC
+        gslx::data_types
 )
 
 add_library("gslx::utils" ALIAS "utils")
