Add a spline builder on multipatch geometry
Add a spline builder on multipatch geometry.

This builder calls the builders on each patch.

It uses std::tuple.

See merge request gysela-developpers/gyselalibxx!549

--------------------------------------------

Co-authored-by: Pauline Vidal <pauline.vidal@ipp.mpg.de>

--- a/tests/multipatch/CMakeLists.txt
+++ b/tests/multipatch/CMakeLists.txt
@@ -19,3 +19,7 @@ PUBLIC
 )
 target_compile_definitions("${test_name_gtest}" PUBLIC)
 gtest_discover_tests("${test_name_gtest}" )
+
+
+
+add_subdirectory(spline)
