apply MR suggestion

--- a/tests/quadrature/CMakeLists.txt
+++ b/tests/quadrature/CMakeLists.txt
@@ -17,7 +17,7 @@ target_link_libraries(unit_tests_quadrature
         gslx::quadrature
         gslx::utils
 )
-gtest_discover_tests(unit_tests_quadrature)
+gtest_discover_tests(unit_tests_quadrature DISCOVERY_MODE PRE_TEST)
 target_compile_definitions(unit_tests_quadrature PUBLIC)
 
 foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
