--- a/src/geometryXVx/geometryMX/reactionrates/CMakeLists.txt
+++ b/src/geometryXVx/geometryMX/reactionrates/CMakeLists.txt
@@ -4,6 +4,9 @@ foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 
 add_library("reactionrates_${GEOMETRY_VARIANT}" STATIC
     constantrate.cpp
+    charge_exchange.cpp
+    ionization.cpp
+    recombination.cpp
 )
 
 target_include_directories("reactionrates_${GEOMETRY_VARIANT}"
@@ -13,6 +16,8 @@ target_include_directories("reactionrates_${GEOMETRY_VARIANT}"
 target_link_libraries("reactionrates_${GEOMETRY_VARIANT}"
     PUBLIC
         DDC::DDC
+        DDC::PDI_Wrapper
+        sll::SLL
         gslx::geometry_${GEOMETRY_VARIANT}
         gslx::speciesinfo
 )
