--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,69 +5,27 @@ on:
     branch: [ 'main' ]
 
 jobs:
-  docker:
-    if: github.repository == 'gyselax/gyselalibxx'
-    uses: .github/workflows/docker.yml
-    with:
-      SHA: ${{ github.sha }}
-      update_latest: true
-    secrets: inherit
-
   cpu_tests:
-    runs-on: ubuntu-latest
-    needs: docker
-    container:
-      image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
-      options: --user root
     strategy:
       matrix:
         toolchain: [tests_toolchain.cmake, tests_release_toolchain.cmake, tests_release_omp_toolchain.cmake]
-    steps:
-    - name: Checkout gyselalibxx
-      uses: actions/checkout@v4
-      with: { submodules: recursive }
-    - name: "Filter tests"
-      uses: ./github/actions/test_filter
-    - name: Run tests
-      run: |
-        mkdir build
-        cd build
-        cmake -DCMAKE_TOOLCHAIN=../toolchains/docker.gyselalibxx_env/${{ matrix.toolchain }} ..
-        cmake --build .
-        ctest -j 2 --timeout 5 --output-junit tests.xml
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v4
-      if: success() || failure() # always run even if the previous step fails
-      with:
-        report_paths: './build/test.xml'
-    - name: Resource conservation
-      if: failure()
-      run: |
-        gh pr ready ${{ github.event.pull_request.number }} --undo
+    name: CPU Test (${{ matrix.toolchain }})
+    uses: ./github/workflows/cpu_tests.yml
+    with:
+      toolchain: ${{ matrix.toolchain }}
+      merge_target: ${{ github.event.pull_request.base.ref }}
 
   gpu_tests:
-    runs-on: self-hosted
-￼   environment: development
+    name: GPU Test (${{ matrix.toolchain }})
+    uses: ./github/workflows/gpu_tests.yml
+    with:
+      toolchain: ./toolchains/v100.persee/toolchain.cmake
+      merge_target: ${{ github.event.pull_request.base.ref }}
+
+  resource_conservation:
+    needs: [cpu_tests, gpu_tests]
+    if: failure()
     steps:
-    - name: Checkout gyselalibxx
-      uses: actions/checkout@v4
-      with: { submodules: recursive }
-    - name: "Filter tests"
-      uses: ./github/actions/test_filter
-    - name: Run tests
-      run: |
-        . toolchains/v100.persee/environment.sh
-        mkdir build
-        cd build
-        cmake -DCMAKE_TOOLCHAIN=../toolchains/v100.persee/toolchain.cmake ..
-        cmake --build .
-        ctest -j 2 --timeout 5 --output-junit tests.xml
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v4
-      if: success() || failure() # always run even if the previous step fails
-      with:
-        report_paths: './build/test.xml'
     - name: Resource conservation
-      if: failure()
-      run: |
+      run:
         gh pr ready ${{ github.event.pull_request.number }} --undo
