--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         toolchain: [tests_toolchain.cmake, tests_release_toolchain.cmake, tests_release_omp_toolchain.cmake]
     name: CPU Test (${{ matrix.toolchain }})
-    if: ! github.event.pull_request.draft
+    if: '! github.event.pull_request.draft'
     uses: ./.github/workflows/cpu_tests.yml
     with:
       toolchain: ${{ matrix.toolchain }}
@@ -18,7 +18,7 @@ jobs:
 
   gpu_tests:
     name: GPU Test (${{ matrix.toolchain }})
-    if: ! github.event.pull_request.draft
+    if: '! github.event.pull_request.draft'
     uses: ./.github/workflows/gpu_tests.yml
     with:
       toolchain: ./toolchains/v100.persee/toolchain.cmake
