Decouple FEM poisson solver from QN solver
Fixes #218

See merge request gysela-developpers/gyselalibxx!521

--------------------------------------------

--- a/simulations/geometryXVx/landau/CMakeLists.txt
+++ b/simulations/geometryXVx/landau/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(landau_fem_uniform_${GEOMETRY_VARIANT}
         gslx::boltzmann_${GEOMETRY_VARIANT}
         gslx::advection
         gslx::io
+        gslx::pde_solvers
 )
 
 install(TARGETS landau_fem_uniform_${GEOMETRY_VARIANT})
@@ -40,6 +41,7 @@ target_link_libraries(landau_fft
         gslx::boltzmann_xperiod_vx
         gslx::advection
         gslx::io
+        gslx::pde_solvers
 )
 
 install(TARGETS landau_fft)
