--- a/tests/pde_solvers/CMakeLists.txt
+++ b/tests/pde_solvers/CMakeLists.txt
@@ -5,6 +5,8 @@ include(GoogleTest)
 
 add_executable(unit_tests_pde_solvers
     fftpoissonsolver.cpp
+    femperiodicpoissonsolver.cpp
+    femnonperiodicpoissonsolver.cpp
     ../main.cpp
 )
 target_link_libraries(unit_tests_pde_solvers
@@ -12,8 +14,10 @@ target_link_libraries(unit_tests_pde_solvers
         DDC::DDC
         GTest::gtest
         GTest::gmock
-        gslx::utils
         gslx::pde_solvers
+        gslx::quadrature
+        gslx::speciesinfo
+        gslx::utils
 )
 
 gtest_discover_tests(unit_tests_pde_solvers)
