--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
 
 cmake_tests:
   extends: .cmake_tests
-  image: ghcr.io/gyselax/gyselalibxx_env
+  image: ghcr.io/gyselax/gyselalibxx_env:138a3a55a20b6946b8b1bff509a5d7ad70f6e0c3
   timeout: 2 hours
   variables:
     RELATIVE_RESTART_TOLERANCE: '0.0'
@@ -26,7 +26,7 @@ cmake_tests:
 
 cmake_tests_Release:
   extends: .cmake_tests
-  image: ghcr.io/gyselax/gyselalibxx_env
+  image: ghcr.io/gyselax/gyselalibxx_env:138a3a55a20b6946b8b1bff509a5d7ad70f6e0c3
   variables:
     RELATIVE_RESTART_TOLERANCE: '0.0'
     ABSOLUTE_RESTART_TOLERANCE: '0.0'
@@ -52,7 +52,7 @@ cmake_tests_Release:
 
 cmake_tests_Release_OMP:
   extends: .cmake_tests
-  image: ghcr.io/gyselax/gyselalibxx_env
+  image: ghcr.io/gyselax/gyselalibxx_env:138a3a55a20b6946b8b1bff509a5d7ad70f6e0c3
   variables:
     RELATIVE_RESTART_TOLERANCE: '1e-14'
     ABSOLUTE_RESTART_TOLERANCE: '1e-14'
