Create (vpar,mu) collision simulation
Closes #248

See merge request gysela-developpers/gyselalibxx!520

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/simulations/geometry5D/testcollisions/CMakeLists.txt
+++ b/simulations/geometry5D/testcollisions/CMakeLists.txt
@@ -10,7 +10,7 @@ target_link_libraries(testcollisions
   gslx::io
   gslx::paraconfpp
   gslx::quadrature
-  gslx::collision
+  gslx::collisions
   gslx::speciesinfo
   PDI::pdi
   paraconf::paraconf
