--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,9 +11,10 @@ add_subdirectory(geometryXVx)
 add_subdirectory(geometryXY)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
+add_subdirectory(geometryVparMu)
 add_subdirectory(interpolation)
 add_subdirectory(multipatch)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
-add_subdirectory(collision)
+add_subdirectory(collisions)
 add_subdirectory(pde_solvers)
